Fixing layout problem

--- a/css/app2.sass
+++ b/css/app2.sass
@@ -12,11 +12,12 @@ html
 
 body
   display: grid
-  grid-template-columns: auto max-content
+  grid-template-columns: auto 380px
   grid-template-rows: min-content auto min-content
   height: 100%
   margin: 0px
-  overflow: hidden
+  width: 100%
+  //overflow: hidden
   font-family: sans-serif
 
 #sudevHeader
@@ -29,17 +30,20 @@ body
   border-bottom: 1px solid gray
 
 #sudevGrdiv
+  grid-column: 1/2
   display: flex
   flex-direction: column
   align-content: stretch
 
   .gs
     height: 100%
+    width: 100%
 
   .gs#grPager
     height: 40%
 
 #sudevInfodiv
+  grid-column: 2/3
   overflow: auto
   padding-left: 20px
   padding-right: 20px
@@ -50,7 +54,7 @@ body
     width: 100%
 
 #sudevFilesList
-  grid-column: 1/2
+  grid-column: 1/3
   display: flex
   flex-wrap: wrap
 
